Fix overflow behaviour

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,7 @@ div#__next,
 div#__next > div,
 div#__next > div > div {
   height: 100%;
+  overflow: hidden;
 }
 
 a {
